feat(PN-21309): implement campaign detail API
