# src/main/java/it/pagopa/pn/bff/rest/InformalNotificationSenderController.java
@@ -1,6 +1,7 @@
 package it.pagopa.pn.bff.rest;
 
 import it.pagopa.pn.bff.generated.openapi.server.v1.api.SenderInformalNotificationsApi;
+import it.pagopa.pn.bff.generated.openapi.server.v1.dto.notifications.BffCampaignDetailResponseV1;
 import it.pagopa.pn.bff.generated.openapi.server.v1.dto.notifications.BffCampaignSearchResponseV1;
 import it.pagopa.pn.bff.service.InformalNotificationSenderService;
 import lombok.CustomLog;
@@ -9,6 +10,8 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.server.ServerWebExchange;
 import reactor.core.publisher.Mono;
+
+import java.util.UUID;
 
 @CustomLog
 @RestController
@@ -37,6 +40,29 @@ public class InformalNotificationSenderController implements SenderInformalNotif
                 );
 
         return serviceResponse.map(response ->
+                ResponseEntity.status(HttpStatus.OK).body(response)
+        );
+    }
+
+    /**
+     * Get the detail of a campaign
+     *
+     * @param campaignId - The ID of the campaign
+     * @param senderId   - The ID of the sender
+     * @return the details of the requested campaign
+     */
+    @Override
+    public Mono<ResponseEntity<BffCampaignDetailResponseV1>> getCampaignDetailV1(
+            String campaignId,
+            UUID senderId,
+            final ServerWebExchange exchange) {
+
+        Mono<BffCampaignDetailResponseV1> campaignDetail = informalNotificationSenderService.getCampaignDetail(
+                campaignId,
+                senderId
+        );
+
+        return campaignDetail.map(response ->
                 ResponseEntity.status(HttpStatus.OK).body(response)
         );
     }
